# 2DGame

./: CMakeLists.txt  README.md  deploy.sh
src/: Application.cpp  Application.h  EventHandler.cpp  EventHandler.h  FileHandler.cpp  FileHandler.h  GameObject.cpp  GameObject.h  Globals.cpp  Globals.h  InputHandler.cpp  InputHandler.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
src/shaders/: fragShader.frag  vertexShader.vert
